--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@saas-ui/react": "^2.8.8",
-    "@tanstack/react-query": "^5.49.2",
+    "@tanstack/react-query": "^5.51.21",
     "@tanstack/react-table": "^8.19.3",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -44,7 +44,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
-    "react-router-dom": "^6.24.0",
+    "react-router": "6",
+    "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
