--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.1.7",
     "formik": "^2.4.6",
     "framer-motion": "^11.3.17",
+    "lucide": "^0.429.0",
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
